fixing the overlap issue in featured dept

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4895,9 +4895,14 @@ input[type="number"] {
 
 
 
-.header-sticky.mobile {
-  all: unset;
-}
+  .header-sticky.mobile {
+    all: unset;
+  }
+
+  .slider {
+    margin-bottom: 6em;
+  }
+
 
   /* mega menu */
 
